# swarm-mqp

./: .gitignore_BACKUP_2835  README.md
elevation_map/src/: elevation_map.h  main.cpp  test
matlabScripts/: createMask.m  findrobot.asv  findrobot.m  transform.asv  transform.m
obstexample/: CMakeLists.txt
obstexample/experiments/: diffusion_1.argos
obstexample/plugins/: CMakeLists.txt  footbot_diffusion.cpp  footbot_diffusion.h
pythonScripts/: Stuehrmannfunctions.py  Stuehrmannfunctions.sublime-workspace  changeimgs.py  gridMerge.py  readme.txt  teleop.py
ugv_diffusion_occupancy/: CMakeLists.txt  occupancy_medium.h  todo.txt
ugv_diffusion_occupancy/cmake/: FindLua52.cmake
ugv_diffusion_occupancy/experiments/: epuck_obstacleavoidance.argos  khepera_occupancy.argos
ugv_diffusion_occupancy/plugins/: CMakeLists.txt  Makefile  cmake_install.cmake
ugv_diffusion_occupancy/plugins/controllers/: CMakeLists.txt  Makefile
ugv_diffusion_occupancy/plugins/controllers/epuck_obstacleavoidance/: CMakeLists.txt  Makefile  cmake_install.cmake  epuck_obstacleavoidance.cpp  epuck_obstacleavoidance.h
ugv_diffusion_occupancy/plugins/controllers/kheperaiv_occupancy/: CMakeLists.txt  Makefile  kheperaiv_occupancy_controller.cpp  kheperaiv_occupancy_controller.h
ugv_diffusion_occupancy/plugins/loop_functions/: CMakeLists.txt
ugv_diffusion_occupancy/plugins/loop_functions/occupancy_visualizer/: CMakeLists.txt  occupancy_visualizer.cpp  occupancy_visualizer.h
ugv_diffusion_occupancy/plugins/loop_functions/octomap_manager/: CMakeLists.txt  octomap_manager.cpp  octomap_manager.h
ugv_diffusion_occupancy/plugins/robots/: Makefile  cmake_install.cmake
ugv_diffusion_occupancy/plugins/robots/generic/: CMakeLists.txt  cmake_install.cmake
ugv_diffusion_occupancy/plugins/robots/generic/control_interface/: ci_occupancy_actuator.cpp  ci_occupancy_actuator.h
ugv_diffusion_occupancy/plugins/robots/generic/simulator/: occupancy_default_actuator.cpp  occupancy_default_actuator.h
ugv_diffusion_occupancy/plugins/simulator/: CMakeLists.txt
ugv_diffusion_occupancy/plugins/simulator/media/: CMakeLists.txt  Makefile  cmake_install.cmake  occupancy_medium.cpp  occupancy_medium.h
ugv_exploration/: CMakeLists.txt  diffusion_tree.bt
ugv_exploration/experiments/: khepera_exploration.argos
ugv_exploration/plugins/controllers/: CMakeLists.txt  cmake_install.cmake
ugv_exploration/plugins/controllers/kheperaiv_exploration/: CMakeLists.txt  cmake_install.cmake  kheperaiv_exploration_controller.cpp  kheperaiv_exploration_controller.h
ugv_exploration/plugins/loop_functions/: CMakeLists.txt
ugv_exploration/plugins/loop_functions/octomap_manager/: CMakeLists.txt  octomap_manager.cpp  octomap_manager.h
ugv_exploration/plugins/robots/: CMakeLists.txt
ugv_exploration/plugins/robots/generic/: Makefile
ugv_exploration/plugins/simulator/: CMakeLists.txt  Makefile  cmake_install.cmake
